2007-11-02  Ingmar Schlecht  <ingmar@typo3.org>

	* Added default SVN properties and Id marker to new files which didn't have it yet
	* Fixed bug #6624: Weird pagetree display with new "Not in menu" feature (Thanks to Christian Kuhn)
	* Bug #6561 revised: Registers IMAGE_NUM and IMAGE_NUM_CURRENT contained incorrect array indizes (Thanks to Helmut Hummel)

2007-11-02  Stanislas Rolland  <stanislas.rolland@fructifor.ca>

	* Fixed feature #6579: Small correction to FE htmlArea RTE
	* Remove exception catching in htmlArea RTE when setting styleWithCSS
	* Fixed bug 6640: htmlArea RTE tool bar is not updated in IE when up or down arrow is pressed
	* Fixed feature #6619: Add underscore rather than dash in file names

2007-11-01  Stanislas Rolland  <stanislas.rolland@fructifor.ca>

	* Added feature #6579: Make htmlArea RTE extensible
	* Added feature #6619: Let htmlArea RTE use t3lib_div::minifyJavaScript()
	* Deleted all compressed files in accordance with feature #6619
	* Fixed bug 6476: htmlArea RTE incorrectly nests tags on return key in FF

2007-10-31  Ingo Renner  <ingo@typo3.org>

	* Added feature 6169: Add user function support to Constant Editor

2007-10-30  Jeff Segars  <jeff@webempoweredchurch.org>

	* Fixed bug #6618: Web->List: Add title to versioning symbol in extended view	(Thanks to Christian Kuhn)

2007-10-30  Oliver Hader  <oh@inpublica.de>

	* (minor) Fixed bug #6613: IRRE/RTE - Creating a new child record fails if record uses htmlArea RTE

2007-10-30  Benjamin Mack  <mack@xnos.org>

	* Moved "doc" module to sysext "opendocs"
	* Fixed Bug #4832: Integrate the extension ter_update_check into EM (Thanks to Christian Welzel)

2007-10-29  Jeff Segars  <jeff@webempoweredchurch.org>

	* Fixed bug #5338: Error installing suggested extensions

2007-10-29  Dmitry Dulepov  <dmitry@typo3.org>

	* Fixed bug #6581: Fatal error in TCEForms: Fatal error: Cannot use string offset as an array